# Auto-target-tracking

./: CMakeLists.txt  README.md  main.cpp  position_controller.cpp  tcamimage.cpp
include/: Resource.h  position_controller.h
